Adjusting the width of Block 4 to fix the mobile layout bug 2.

--- a/src/App.css
+++ b/src/App.css
@@ -1556,7 +1556,9 @@ nav {
     padding-left: 4px;
     padding-right: 4px;
   }
-
+  .block4-flex-child1 .wrapper {
+    margin-left: 2rem;
+  }
   .asp-link {
     width: 280px;
 
